tests/negative/symbols/use_undef.orng
fn main() -> Int {
    let x: Int = undefined
    x
}